Overflow of Caption fixed with added new class and by defining it in css file as well

--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,11 @@
   position: relative;
 }
 
+.post_caption{
+  width: 384px;
+  padding: 8px;
+}
+
 .post__comments {
   padding: 0 15px;
   display: flex;
